--- a/index.html
+++ b/index.html
@@ -5,12 +5,36 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Generatore di Password insicurissimo</title>
+
+        <!-- Bootstrap link -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     </head>
 
     <body>
 
+        <!--Page title-->
+        <header>
+            <nav class="navbar bg-body-tertiary py-4" data-bs-theme="dark">
+                <div class="container-fluid  justify-content-center text-uppercase">
+                    <a class="navbar-brand px-2 border border-danger-subtle rounded-pill" href="index.html">
+
+                        <h1 class=" fw-semibold text-danger mb-0 ">Generatore insicurissimo di password</h1>
+                    </a>
+                </div>
+            </nav>
+
+        </header>
+        <main></main>
+
         <!-- Link to main.js -->
         <script type="text/javascript" src="/js/main.js"></script>
+
+        <!-- Link to bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     </body>
 
 </html>
