--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     </head>
 
-    <body>
+    <body class="bg-warning">
 
         <!--Page title-->
         <header>
-            <nav class="navbar bg-body-tertiary py-4" data-bs-theme="dark">
+            <nav class="navbar bg-body-tertiary py-4 " data-bs-theme="dark">
                 <div class="container-fluid  justify-content-center text-uppercase">
                     <a class="navbar-brand px-2 border border-danger-subtle rounded-pill" href="index.html">
 
@@ -26,7 +26,66 @@
             </nav>
 
         </header>
-        <main></main>
+
+        <!-- Main section -->
+        <main>
+            <div class="container  pt-4">
+
+                <div class="row row-gap-3 ">
+                    <div class="col-12 col-md-6 col-lg-3 ">
+                        <div class=" card border-dark h-100">
+                            <div class="card-header bg-dark text-danger">
+                                Nome
+                            </div>
+                            <div class="card-body ">
+                                <h5 id="user-name"></h5>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class=" card border-dark h-100 ">
+                            <div class="card-header bg-dark text-danger ">
+                                Cognome
+                            </div>
+                            <div class="card-body  ">
+                                <h5 id="user-last-name"></h5>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class=" card border-dark h-100">
+                            <div class="card-header bg-dark text-danger">
+                                Colore preferito
+                            </div>
+                            <div class="card-body">
+                                <h5 id="user-color"></h5>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class=" card border-dark">
+                            <div class="card-header bg-dark text-danger">
+                                Numeri inseriti
+                            </div>
+                            <div class="card-body">
+                                <h5 id="user-num-1"></h5>
+                                <hr>
+                                <h5 id="user-num-2"></h5>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+
+        </main>
 
         <!-- Link to main.js -->
         <script type="text/javascript" src="/js/main.js"></script>
