--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <main>
             <div class="container  pt-4">
 
+                <!-- Print user data -->
+
                 <div class="row row-gap-3 ">
                     <div class="col-12 col-md-6 col-lg-3 ">
                         <div class=" card border-dark h-100">
@@ -83,6 +85,30 @@
 
 
                 </div>
+                <!-- /Print user data -->
+
+                <hr class="border border-danger border-2 opacity-50">
+
+                <!-- Print password -->
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 ">
+                        <div class="  card border-dark h-100 text-center">
+                            <div class="card-header bg-dark text-danger ">
+                                Password generata
+                            </div>
+                            <div class="card-body ">
+                                <h5 id="user-psw"></h5>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- /Print password -->
+
+
+
             </div>
 
         </main>
