--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <!-- /Print user data -->
 
-                <hr class="border border-danger border-2 opacity-50">
+                <hr class="border border-danger border-2 ">
 
                 <!-- Print password -->
                 <div class="row justify-content-center">
@@ -112,6 +112,13 @@
             </div>
 
         </main>
+        <footer class="fixed-bottom">
+            <div class="container-fluid bg-dark text-center py-2 ">
+                <span class="text-secondary fw-light"> Usa questo strumento responsabilmente (non lo usare).</span>
+
+            </div>
+
+        </footer>
 
         <!-- Link to main.js -->
         <script type="text/javascript" src="/js/main.js"></script>
