fix: cards text alignment

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <div class="card-header bg-dark text-danger">
                                 Nome
                             </div>
-                            <div class="card-body ">
+                            <div class="card-body d-flex align-items-center">
                                 <h5 id="user-name"></h5>
 
                             </div>
@@ -50,7 +50,7 @@
                             <div class="card-header bg-dark text-danger ">
                                 Cognome
                             </div>
-                            <div class="card-body  ">
+                            <div class="card-body  d-flex align-items-center ">
                                 <h5 id="user-last-name"></h5>
 
                             </div>
@@ -61,7 +61,7 @@
                             <div class="card-header bg-dark text-danger">
                                 Colore preferito
                             </div>
-                            <div class="card-body">
+                            <div class="card-body  d-flex align-items-center">
                                 <h5 id="user-color"></h5>
 
                             </div>
